--- a/fifavizHenrique.ipynb
+++ b/fifavizHenrique.ipynb
@@ -1346,7 +1346,7 @@
     "                    name='example'\n",
     "                    )\n",
     "\n",
-    "layout_scatter = dict(xaxis=dict(title='X axis'),\n",
+    "layout_scatter = dict(xaxis=dict(title='X axis', color=\"black\"),\n",
     "                      yaxis=dict(title='Y axis')\n",
     "                      )\n",
     "\n",
