--- a/Fifa_Lorenzo.ipynb
+++ b/Fifa_Lorenzo.ipynb
@@ -464,6 +464,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_10_leagues = ['Spain Primera Division', 'Italian Serie A', 'Spain Primera Division', \n",
+    "                  'German 1. Bundesliga', 'French Ligue 1', 'English Premier League', \n",
+    "                  'Portuguese Liga ZON SAGRES', 'Belgian Jupiler Pro League', \n",
+    "                  'Holland Eredivisie', 'Russian Premier League']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -551,7 +563,7 @@
     }
    ],
    "source": [
-    "df.iloc[:, :10].head(2)"
+    " df.iloc[:, :10].head(2)"
    ]
   },
   {
